Fix(Styling): Fixed global nav not centered properly

--- a/src/sections/Header/Header.css
+++ b/src/sections/Header/Header.css
@@ -9,7 +9,9 @@
 }
 
 .global-nav {
+  display: flex;
   justify-self: flex-start;
+  align-items: center;
 }
 
 .global-nav__items {
